--- a/cml.yaml
+++ b/cml.yaml
@@ -11,4 +11,4 @@ jobs:
         run: |
         # your ML workflow goes here
           pip install -r requirements.txt
-          python train.py
+          python mlp.py
